# statistical-inference-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: ndt_tests_tratado.csv
notebooks/: 00_preprocessing.ipynb  01_eda.ipynb  02_mle.ipynb  03_bayesian_inference.ipynb
reports/: main.tex
src/toolkit/: utils.py
