[tool.poetry]
name = "network-statistical-analysis"
version = "0.1.0"
description = "Statistical modeling of network performance metrics using MLE and Bayesian inference."
authors = ["João Victor Barros"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaovictorbarros/network-statistical-analysis"
packages = [{ include = "toolkit", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = ">=2.0.0"           
numpy = ">=1.20.0"           
statsmodels = ">=0.14.0"     
scipy = ">=1.10.0"           
matplotlib = ">=3.6.0"       
seaborn = ">=0.12.0"         
jupyterlab = ">=4.0.0"       
tqdm = "^4.66.5"             
pymc = "^5.15.0"             
arviz = "^0.17.1"            
ipykernel = "^6.29.5"        
notebook = "^7.2.2"          
plotly = "^5.24.1"           